IBX-2520: Fix action buttons from the header overlapping with other thins before adaptive items is initialized

--- a/src/bundle/Resources/public/scss/_context-menu.scss
+++ b/src/bundle/Resources/public/scss/_context-menu.scss
@@ -11,6 +11,14 @@
     margin: 0;
     list-style: none;
 
+    &--before-adaptive-items-init {
+        overflow: hidden;
+        display: flex;
+        flex-wrap: wrap;
+        height: calculateRem(48px);
+        padding: 0;
+    }
+
     &__item {
         padding-left: calculateRem(16px);
 
